# seeds

./: .dockerignore  .gitignore  Dockerfile
.deploy/: seeds-app.yaml
.deploy/seeds-app/: deployment.yaml  ingress.yaml  service.yaml
.github/workflows/: docker-publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
migrations/: 001_initial.sql  002_inventory.sql  004_season_plans.sql  005_expanded_growing_details.sql  008_plan_status.sql
seeds-rs/: Cargo.toml
seeds-rs/migrations/: 001_initial.sql  003_seed_purchases.sql  006_season_plan_events.sql  007_plan_start_method.sql
seeds-rs/src/: error.rs  main.rs
seeds-rs/src/db/: models.rs  queries.rs
seeds-rs/src/routes/: home.rs  mod.rs  schedule.rs  seeds.rs  settings.rs
seeds-rs/src/schedule/: calculator.rs  mod.rs  parser.rs
seeds-rs/src/scraper/: fetcher.rs  mod.rs  parser.rs
seeds-rs/src/templates/: home.rs  layout.rs  mod.rs  schedule.rs  seed_detail.rs  settings.rs
seeds-rs/src/viability/: mod.rs
seeds-rs/static/: style.css
src/: error.rs  main.rs
src/db/: models.rs  queries.rs
src/routes/: home.rs  schedule.rs  seeds.rs  settings.rs
src/schedule/: calculator.rs  mod.rs  parser.rs
src/scraper/: fetcher.rs  images.rs  mod.rs  parser.rs
src/search/: ast.rs  eval.rs  mod.rs  parser.rs  token.rs
src/templates/: home.rs  layout.rs  (+3 more)
static/: style.css
(+27 files in other folders)
