[package]
name = "seeds-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.22"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
